--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "prop-types": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-items-carousel": "^2.8.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "lodash": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
