--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mdbreact": "^4.25.2",
     "prop-types": "latest",
     "react": "^16.12.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.12.0",
     "react-items-carousel": "^2.8.0",
     "react-redux": "^7.1.3",
