--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
-  "homepage": "https://paolodelia99.github.io/netflix-clone",
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
